[package]
name = "tergent"
version = "1.0.0"
authors = ["Kaan Karaagacli <kaankaraagacli@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.12.3"
bitflags = "1.2.1"
hex = "0.4.2"
nix = "0.18.0"
num-derive = "0.3.1"
num-traits = "0.2.12"
once_cell = "1.4.0"
serde_json = "1.0.57"
simple_asn1 = "0.4.1"
uuid = { version = "0.8.1", features = ["v4"] }
